--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +18,8 @@
   },
   "homepage": "https://github.com/iamtonybologna/shopify-code-challenge#readme",
   "dependencies": {
-    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "nodemon": "^1.11.0",
     "request": "^2.81.0"
   }
 }
