--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/iamtonybologna/shopify-code-challenge#readme",
   "dependencies": {
     "express": "^4.15.2",
+    "koa": "^2.2.0",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
   }
