--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/iamtonybologna/shopify-code-challenge#readme",
   "dependencies": {
+    "koa": "",
     "express": "^4.15.2",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
